Network/Ingress/templates/CoREGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: core-gateway
spec:
  selector:
    #
    # Default Istio Gateway
    #
    # Deployed [here](https://gitlab.git.writemy.codes/KJDev/CORE-Backplane/-/blob/main/Mesh/Service/Istio/templates/Gateway.yaml)
    #

    istio: ingressgateway


  servers:

    - port:
        number: 443
        name: https-mylogin
        protocol: HTTPS

      tls:
        mode: SIMPLE
        credentialName: myloginspace-default-certificates

      hosts:
        - '*.mylogin.space'

    - port:
        number: 443
        name: https-mylogin-int
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: myloginspace-int-default-certificates
      hosts:
        - '*.int.mylogin.space'

    - port:
        number: 443
        name: https-writemy-codes
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: writemycodes-default-certificates
      hosts:
        - '*.writemy.codes'

    - port:
        number: 443
        name: https-ipaddr-network
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ipaddrnetwork-default-certificates
      hosts:
        - ipaddr.network
        - '*.ipaddr.network'

    - port:
        number: 443
        name: https-gitlab
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: gitlab-certificate
      hosts:
        - '*.git.writemy.codes'

    - port:
        number: 443
        name: https-tcp
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - '*.gitpods.writemy.codes'
        - '*.ws.gitpods.writemy.codes'

    - port:
        number: 443
        name: https-sndfyi-network
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sndfyi-default-certificates
      hosts:
        - snd.fyi
        - '*.snd.fyi'

    - port:
        number: 443
        name: https-outoftheworld-network
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: outoftheworldspace-default-certificates
      hosts:
        - outoftheworld.space
        - '*.outoftheworld.space'

    #
    #
    # Storage
    #
    #



    #
    # Content Delivery and Caching 
    #
    - port:
        number: 80
        name: http-main
        protocol: HTTP
      hosts:
        - static.mylogin.space
        - 10.1.1.83

    #
    # Media Delivery
    #

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kjmediastream-default-certificates
      hosts:
        - kjmedia.stream
        - '*.kjmedia.stream'


    #
    # Misc Legacy
    #
    - port:
        number: 443
        name: https-kjdev
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kristianjonesdev-default-certificates
      hosts:
        - kristianjones.dev
        - '*.kristianjones.dev'


    #
    # IoT
    # 
    - port:
        number: 443
        name: https-controlcenter
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: controlcenterhouse-default-certificates
      hosts:
        - controlcenter.house
        - '*.controlcenter.house'


    #
    # HTTPS Redirects
    #
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - controlcenter.house
        - '*.controlcenter.house'

        - accessmyporn.download
        - resolvemy.host
        - '*.kjmedia.stream'
        - '*.writemy.codes'
        - '*.ipaddr.network'
        - '*.mylogin.space'
        - '*.gitpods.writemy.codes'
        - '*.ws.gitpods.writemy.codes'
      tls:
        httpsRedirect: true






    - hosts:
        - unifi.ipaddr.network
        - 10.1.1.83
        - 66.165.222.101
      port:
        number: 8080
        name: http-alt
        protocol: HTTP
